# epitech

./: README.md
eip/: README.md
tek1/CPE/bsq/: .gitignore  Makefile  compile_commands.json
tek1/CPE/bsq_bootstrap/: .gitignore  array_1d_print_chars.c  array_1d_print_ints.c  array_1d_sum.c  fs_cat_500_bytes.c  fs_cat_x_bytes.c  fs_get_number_from_first_line.c  fs_open_file.c  fs_print_first_line.c  fs_understand_return_of_read.c
tek1/CPE/dante/: .gitignore  .travis.yml  Makefile  README.md
tek1/CPE/getnextline/: .gitignore  get_next_line.c  get_next_line.h
tek1/CPE/matchstick/: .gitignore  Makefile
tek1/CPE/pushswap/: .gitignore  Makefile
tek1/CPE/pushswap_bootstrap/: .gitignore  Makefile  bubble_sort_array.c  swap_elem.c
tek1/cpool/: README.md
tek2/OOP/arcade/: .gitignore  CMakeLists.txt  README.md
tek2/OOP/arcade/doc/: Arcade-UML.mdj
tek2/OOP/arcade/src/: AGame.cpp  AGame.hpp  Entity.cpp  Entity.hpp  IEntity.hpp  IGame.hpp  IGraphic.hpp  ILibrary.hpp  IScene.hpp  LibraryHandler.cpp  LibraryHandler.hpp  MainMenu.cpp  MainMenu.hpp  NCurses.cpp  NCurses.hpp  Nibbler.cpp  Nibbler.hpp  SDL2.cpp  SDL2.hpp  Scene.cpp  Scene.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  api.cpp  api.h  main.cpp  vector2.hpp
tek2/OOP/arcade/src/component/: AsciiSprite.hpp  IComponent.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Transform.hpp
tek2/OOP/arcade/src/event/: IEvent.hpp  KeyboardEvent.hpp  MouseEvent.hpp
tek2/OOP/arcade/src/maps/: Nibbler1.txt  README.md  pacman1.txt
tek2/popeye/: docker-compose.yml
tek3/gomoku/: .clang-format  Makefile  README.md
(+1349 files in other folders)
